--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
         <h2 class="story-header">Sedikit Cerita</h2>
         <div class="story-content">
             <div class="story-image">
-                <img src="https://placehold.co/250x250/76ABAE/222831?text=Kreator+Foto+Profil" alt="Foto Profil Kreator">
+                <img src="https://placehold.co/250x250/76ABAE/222831?text=wujud+admin" alt="wujud asli admin">
             </div>
             
             <div class="story-text-wrapper">
@@ -779,6 +779,7 @@
     <!-- Gallery Section -->
     <section class="gallery" id="gallery">
         <h2 class="section-title">Koleksi Foto</h2>
+        <p style="text-align: center; margin-top: -55px; color: #7a7a7a;">*coming soon*</p>
         <div class="gallery-grid">
             <div class="gallery-item" onclick="openLightbox(this, 'https://placehold.co/400x500/2980b9/ffffff?text=Gang+Sepi')">
                 <img src="https://placehold.co/400x500/2980b9/ffffff?text=Gang+Sepi" alt="Cahaya Pagi di Gang Sepi" onerror="this.onerror=null; this.src='https://placehold.co/400x500/2980b9/ffffff?text=Gang+Sepi';" loading="lazy">
@@ -823,13 +824,14 @@
     <!-- Before-After Section -->
     <section class="before-after" id="before-after">
         <h2 class="section-title">Before & After</h2>
+        <p style="text-align: center; margin-top: -40px; color: #7a7a7a;">*geser garisnya*</p>
         <div class="comparison-labels">
             <span>Before</span>
             <span>After</span>
         </div>
         <div class="comparison-container">
-            <img class="comparison-img" src="https://placehold.co/800x450/444444/FFFFFF?text=Citra+Mentah" alt="Citra Mentah Sebelum Edit" onerror="this.onerror=null; this.src='https://placehold.co/800x450/444444/FFFFFF?text=Citra+Mentah';" loading="lazy">
-            <img class="comparison-img after-img" src="https://placehold.co/800x450/76ABAE/222831?text=Karya+Selesai" alt="Karya Setelah Edit" onerror="this.onerror=null; this.src='https://placehold.co/800x450/76ABAE/222831?text=Karya+Selesai';" loading="lazy">
+            <img class="comparison-img" src="b.jpeg" alt="Citra Mentah Sebelum Edit">
+            <img class="comparison-img after-img" src="a.jpeg" alt="Karya Setelah Edit">
             <div class="slider-line" id="sliderLine">
                 <div class="slider-handle">
                     <i class="fa-solid fa-circle"></i>
@@ -870,10 +872,10 @@
         <div class="contact-content">
             <div class="contact-subtitle">Kalau ada pertanyaan, mau kasih saran, atau sekadar nyapa, hubungi lewat media sosial di bawah ini.</div>
             <div class="social-icons">
-                <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="Github"><i class="fa-brands fa-github"></i></a>
-                <a href="#" aria-label="Discord"><i class="fa-brands fa-discord"></i></a>
-                <a href="#" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://www.instagram.com/mar.nnow" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/linnopixel" aria-label="Github"><i class="fa-brands fa-github"></i></a>
+                <a href="https://discord.com/invite/v2M536ZkW3" aria-label="Discord"><i class="fa-brands fa-discord"></i></a>
+
             </div>
         </div>
     </section>
