--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <span style="color: #76ABAE;">Linnopixel</span>
+            <span style="color: #76ABAE;">MICHELLINO</span>
         </div>
         <div class="hamburger">
             <span></span>
