--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
 
     <!-- Journal Section -->
     <section class="journal" id="journal">
-        <h2 class="section-title">Refleksi Perjalanan</h2>
+        <h2 class="section-title">Makna dari Perjalanan</h2>
         <div class="journal-cards">
             <div class="journal-card">
                 <div class="journal-img">
@@ -1037,4 +1037,5 @@
         });
     </script>
 </body>
+
 </html>
