--- a/index.html
+++ b/index.html
@@ -811,28 +811,28 @@
                     <h4>Jl. Ahmad Yani, Jember</h4>
                 </div>
             </div>
-            <div class="gallery-item" onclick="openLightbox(this, 'https://placehold.co/400x500/222831/DFD0B8?text=Pantai+Aerial')">
-                <img src="https://placehold.co/400x500/222831/DFD0B8?text=Pantai+Aerial" alt="Pantai dari Ketinggian" onerror="this.onerror=null; this.src='https://placehold.co/400x500/222831/DFD0B8?text=Pantai+Aerial';" loading="lazy">
+            <div class="gallery-item" onclick="openLightbox(this, 'koleksi/upacara.avif')">
+                <img src="koleksi/upacara.avif" alt="Upacara Sekolah" onerror="this.onerror=null; this.src='koleksi/upacara.avif';" loading="lazy">
                 <div class="gallery-overlay">
-                    <h4>Pantai dari Ketinggian</h4>
+                    <h4>Upacara Sekolah</h4>
                 </div>
             </div>
-            <div class="gallery-item" onclick="openLightbox(this, 'https://placehold.co/400x500/222831/DFD0B8?text=Sawah+Hijau')">
-                <img src="https://placehold.co/400x500/222831/DFD0B8?text=Sawah+Hijau" alt="Hamparan Sawah Hijau" onerror="this.onerror=null; this.src='https://placehold.co/400x500/222831/DFD0B8?text=Sawah+Hijau';" loading="lazy">
+            <div class="gallery-item" onclick="openLightbox(this, 'koleksi/asrama.jpeg')">
+                <img src="koleksi/asrama.jpeg" alt="Hamparan Sawah Hijau" onerror="this.onerror=null; this.src='koleksi/asrama.jpeg';" loading="lazy">
                 <div class="gallery-overlay">
-                    <h4>Hamparan Sawah Hijau</h4>
+                    <h4>Asrama Jember</h4>
                 </div>
             </div>
-            <div class="gallery-item" onclick="openLightbox(this, 'https://placehold.co/400x500/222831/DFD0B8?text=Senja+Pelabuhan')">
-                <img src="https://placehold.co/400x500/222831/DFD0B8?text=Senja+Pelabuhan" alt="Senja di Pelabuhan" onerror="this.onerror=null; this.src='https://placehold.co/400x500/222831/DFD0B8?text=Senja+Pelabuhan';" loading="lazy">
+            <div class="gallery-item" onclick="openLightbox(this, 'https://static01.nyt.com/images/2020/09/12/world/12china-schools-1/12china-schools-1-mediumSquareAt3X.jpg')">
+                <img src="https://static01.nyt.com/images/2020/09/12/world/12china-schools-1/12china-schools-1-mediumSquareAt3X.jpg" alt="Chinese Students" onerror="this.onerror=null; this.src='https://static01.nyt.com/images/2020/09/12/world/12china-schools-1/12china-schools-1-mediumSquareAt3X.jpg';" loading="lazy">
                 <div class="gallery-overlay">
-                    <h4>Senja di Pelabuhan</h4>
+                    <h4>Chinese School</h4>
                 </div>
             </div>
-            <div class="gallery-item" onclick="openLightbox(this, 'https://placehold.co/400x500/222831/DFD0B8?text=Malam+Kota')">
-                <img src="https://placehold.co/400x500/222831/DFD0B8?text=Malam+Kota" alt="Malam di Pusat Kota" onerror="this.onerror=null; this.src='https://placehold.co/400x500/222831/DFD0B8?text=Malam+Kota';" loading="lazy">
+            <div class="gallery-item" onclick="openLightbox(this, 'koleksi/jl-wr-s.jpeg')">
+                <img src="koleksi/jl-wr-s.jpeg" alt="Malam di Pusat Kota" onerror="this.onerror=null; this.src='koleksi/jl-wr-s.jpeg';" loading="lazy">
                 <div class="gallery-overlay">
-                    <h4>Malam di Pusat Kota</h4>
+                    <h4>Jl. WR Supratman, Jember</h4>
                 </div>
             </div>
         </div>
